<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tetris_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsTitleCL"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailsTitleTexView"
            style="@style/poppins_2xl.semibold"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_marginStart="84.5dp"
            android:layout_marginEnd="84.5dp"
            android:gravity="center"
            android:text="@string/game_details_title"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/gameDetailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsTitleCL">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/auxCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/gameDetailsImage"
                android:layout_width="0dp"
                android:layout_height="84dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/auxCL"
                tools:src="@drawable/hogwarts" />

            <TextView
                android:id="@+id/gameNameDetails"
                style="@style/poppins_xl.semibold"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:gravity="left"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameDetailsImage"
                tools:text="@string/game_details_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gameDetailsBodyCL"
                android:layout_width="0dp"
                android:layout_height="367dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameNameDetails">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gameDetailsRatingDateCL"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/gameDetailsBodyCL">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="175dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="81dp" />

                    <TextView
                        android:id="@+id/ratingTitle"
                        style="@style/poppins_m.semibold"
                        android:layout_width="0dp"
                        android:layout_height="22dp"
                        android:gravity="left"
                        android:textColor="@color/white"
                        android:text="@string/game_details_rating"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/gameDetailsRatingDateCL" />

                    <ImageView
                        android:id="@+id/ratingIcon"
                        android:layout_width="128dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ratingTitle"
                        tools:src="@drawable/ic_rating_blue" />

                    <TextView
                        android:id="@+id/ratingNumber"
                        style="@style/poppins_xl.regular"
                        android:layout_width="24dp"
                        android:layout_height="19dp"
                        android:layout_marginStart="7dp"
                        android:layout_marginBottom="10.5dp"
                        android:layout_marginTop="10.5dp"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline1"
                        app:layout_constraintStart_toEndOf="@+id/ratingIcon"
                        app:layout_constraintTop_toBottomOf="@+id/ratingTitle"
                        tools:text="5.0" />


                    <TextView
                        android:id="@+id/dateTitle"
                        style="@style/poppins_m.semibold"
                        android:layout_width="0dp"
                        android:layout_height="22dp"
                        android:gravity="left"
                        android:textColor="@color/white"
                        android:text="@string/game_details_date"
                        app:layout_constraintStart_toStartOf="@id/guideline2"
                        app:layout_constraintTop_toTopOf="@+id/gameDetailsRatingDateCL" />

                    <TextView
                        android:id="@+id/dateNumber"
                        style="@style/poppins_xl.regular"
                        android:layout_width="0dp"
                        android:layout_height="22dp"
                        android:gravity="left"
                        android:textColor="@color/white"
                        android:text="2017"
                        app:layout_constraintStart_toStartOf="@id/guideline2"
                        app:layout_constraintTop_toBottomOf="@+id/dateTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gameDetailsPlayTimeCL"
                    android:layout_width="240dp"
                    android:layout_height="29dp"
                    android:layout_marginTop="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameDetailsRatingDateCL">

                    <TextView
                        android:id="@+id/playtimeTitle"
                        style="@style/poppins_m.semibold"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="left"
                        android:textColor="@color/white"
                        android:text="@string/game_details_playtime"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/playtimeNumber"
                        style="@style/poppins_xl.regular"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="left"
                        android:textColor="@color/white"
                        tools:text="34h"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/playtimeTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gameDetailsStatusCL"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameDetailsPlayTimeCL">

                    <TextView
                        android:id="@+id/statusTitle"
                        style="@style/poppins_m.semibold"
                        android:layout_width="0dp"
                        android:layout_height="22dp"
                        android:gravity="left"
                        android:textColor="@color/white"
                        android:text="@string/game_details_status"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/status_badges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/status"
                        android:scaleType="fitStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/statusTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gameDetailsSynopsisCL"
                    android:layout_width="0dp"
                    android:layout_height="88dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gameDetailsStatusCL">

                    <TextView
                        android:id="@+id/synopsisTitle"
                        style="@style/poppins_m.semibold"
                        android:layout_width="0dp"
                        android:layout_height="22dp"
                        android:gravity="left"
                        android:text="@string/game_details_synopsis"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/synopsisText"
                        style="@style/poppins_xs.regular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:maxLines="4"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/synopsisTitle"
                        tools:text="@tools:sample/lorem/random" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gameDetailsHoursCL"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="79dp"
                android:layout_marginEnd="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameDetailsBodyCL">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="37dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="96dp"
                    android:src="@drawable/hourglass"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hoursSpentText"
                    style="@style/poppins_5xl.bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="96dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/zero_hours"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>